--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,31 +10,41 @@ permissions:
 
 jobs:
   build:
+    name: Build and Release
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get source code
+      - name: Checkout source code
         uses: actions/checkout@v4
 
-      - name: Install Go
+      - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.21"
+          cache: true
 
-      - name: Build for Linux amd64
+      - name: Download Go dependencies
+        run: |
+          go mod tidy
+          go mod download
+
+      - name: Build Linux amd64
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-          go build -o ipmartnet-linux-amd64 ./cmd/ipmartnet
+          go build -ldflags="-s -w" \
+          -o ipmartnet-linux-amd64 ./cmd/ipmartnet
 
-      - name: Build for Linux arm64
+      - name: Build Linux arm64
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=arm64 \
-          go build -o ipmartnet-linux-arm64 ./cmd/ipmartnet
+          go build -ldflags="-s -w" \
+          -o ipmartnet-linux-arm64 ./cmd/ipmartnet
 
-      - name: Create checksum file
-        run: sha256sum ipmartnet-linux-* > checksums.txt
+      - name: Generate checksums
+        run: |
+          sha256sum ipmartnet-linux-* > checksums.txt
 
-      - name: Upload files to Release
+      - name: Upload binaries to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
