--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,53 +1,20 @@
-name: Build iPmartnet Release
+package main
 
-on:
-  push:
-    tags:
-      - "v*"
+import (
+	"flag"
+	"fmt"
+)
 
-permissions:
-  contents: write
+func main() {
+	role := flag.String("role", "", "iran or outside")
+	proto := flag.String("proto", "tcp", "protocol")
+	listen := flag.String("listen", "", "listen address")
+	connect := flag.String("connect", "", "connect address")
+	flag.Parse()
 
-jobs:
-  build:
-    name: Build and Release
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.21"
-          cache: true
-
-      - name: Download Go dependencies
-        run: |
-          go mod tidy
-          go mod download
-
-      - name: Build Linux amd64
-        run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-          go build -ldflags="-s -w" \
-          -o ipmartnet-linux-amd64 ./cmd/ipmartnet
-
-      - name: Build Linux arm64
-        run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=arm64 \
-          go build -ldflags="-s -w" \
-          -o ipmartnet-linux-arm64 ./cmd/ipmartnet
-
-      - name: Generate checksums
-        run: |
-          sha256sum ipmartnet-linux-* > checksums.txt
-
-      - name: Upload binaries to GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            ipmartnet-linux-amd64
-            ipmartnet-linux-arm64
-            checksums.txt
+	fmt.Println("iPmartnet CLI started")
+	fmt.Println("role   :", *role)
+	fmt.Println("proto  :", *proto)
+	fmt.Println("listen :", *listen)
+	fmt.Println("connect:", *connect)
+}
