Rename job step to 'Prepare Go modules'
git add .github/workflows/release.yml
git commit -m "Add final release workflow"
git push origin master

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   build:
+    name: Build and Upload Release
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +23,7 @@ jobs:
           go-version: "1.21"
           cache: true
 
-      - name: Download Go dependencies
+      - name: Prepare Go modules
         run: |
           go mod tidy
           go mod download
