--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ permissions:
 
 jobs:
   build:
-    name: Build and Upload Release
     runs-on: ubuntu-latest
 
     steps:
@@ -32,13 +31,13 @@ jobs:
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
           go build -ldflags="-s -w" \
-          -o ipmartnet-linux-amd64 ./cmd/ipmartnet
+          -o ipmartnet-linux-amd64 ./cmd/ipmartnet/main.go
 
       - name: Build Linux arm64
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=arm64 \
           go build -ldflags="-s -w" \
-          -o ipmartnet-linux-arm64 ./cmd/ipmartnet
+          -o ipmartnet-linux-arm64 ./cmd/ipmartnet/main.go
 
       - name: Generate checksums
         run: |
